[package]
name = "squant"
version = "0.1.0"
edition = "2024"

[dependencies]
# anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# polars = { version = "0.48.1", features = [
#   "csv",
#   "lazy",
#   "rolling_window",
#   "abs",
#   "cum_agg",
#   "pct_change",
#   "diff",
#   "rank",
# ] } 
uuid = { version = "1", features = ["v4"] }
rand = "0.9.1"
strum = { version = "0.27.1", features = ["derive"] }
either = "1.15.0"
flume = "0.11.1"
serde = "1.0.219"
config = "0.15.11"
# tokio-tungstenite = "0.26.2"
# fast_websocket_client = "0.3.1"
tokio-websockets = { version = "0.12", features = [
  "client",
  "sha1_smol",
  "rand",
  "native-tls",
] }
ringbuf = "0.4.8"
bon = "3.6.3"
reqwest = { version = "0.12.18", features = ["json"] }
const_format = "0.2.34"
tokio = { version = "1.45.1", features = ["full"] }
serde_with = { version = "3.12.0", features = ["chrono"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
itertools = "0.14.0"
okx-rs = "0.1.1"
eyre = "0.6.12"
http = "1.3.1"
tokio-util = { version = "0.7.15", features = ["full"] }
futures-util = { version = "0.3.31", features = ["sink"] }
bytestring = { version = "1.4.0", features = ["serde"] }
url = "2.5.4"
itoa = "1.0.15"
pin-project = "1.1.10"
simd-json = "0.15.1"
bytes = "1.10.1"
